Got rid of deprecated Locale constructor